OpenJMLTest/test/gitbug445a/expected
test/gitbug445a/Pair.java:19: error: A \result expression may not be in a model_program clause
      @ { \result.add(0,p.run(first));
           ^
test/gitbug445a/Pair.java:20: error: A \result expression may not be in a model_program clause
      @   \result.add(1,p.run(second));
           ^
test/gitbug445a/Pair.java:21: error: cannot find symbol
      @   return res;
                 ^
  symbol:   variable res
  location: class Pair<T>
test/gitbug445a/PMax.java:4: warning: Method run overrides parent class methods and so its specification should begin with 'also' (PMax.run(java.lang.Integer) overrides Proc.run(T))
    /*@ assignable maxSeen;
        ^
Operation not performed because of parse or type errors
3 errors
1 warning
